added links to my blog

--- a/blogasaurus.html
+++ b/blogasaurus.html
@@ -1,9 +1,9 @@
 <html>
   <head>
     <title> Esty </title>
+    <link rel="stylesheet" href="blogasaurus.css">
   </head>
   <body>
-    <h1> BLOGASAURUS </h1>
     <h2> All About Me </h2>
       <p> My name is Esty Scheiner, I'm all the way from Boulder Colorado. I am
       going to Touro College in Israel next year, and I am super excited:)</p>
@@ -13,8 +13,10 @@
         <img src ="http://www.thecanyon.com/assets/css/images/grandcanyon1.jpg" width=350/>
    <p> here is a link to the Grand Canyon</p>
     <a href = "http://www.thecanyon.com/"> The Grand Canyon </a>
-    <h2><ol> Things I love </ol></h2>
+    <h2> Things I love </h2>
+    <ol>
         <li> Family</li>
         <li> Freinds</li>
         <li> Sleep</li>
         <li> Play </li>
+    </ol>
