adding my html into internal vars in python

--- a/ten.html
+++ b/ten.html
@@ -13,11 +13,12 @@
    <div class= 'things'>
      Things About Myself
    </div>
-   <div class= 'list'>
-   I Went off all dairy, sugar, and wheat for six months
+   <div class= 'list' id = 'one'>
+   I have quite a large family- 10 siblings to be exact!
    </div>
-   <div class= 'list'>
-   I have 10 siblings
-   </div>
+   <div class= 'list' id = 'two'>
+   I went on the Whole30 for 6 months: NO SUGAR; NO WHEAT; NO DAIRY
+   <script src = 'ten.js'></script>
+   <script src="jquery-3.2.1.min.js"></script>
  </body>
 </html>
